--- a/home.html
+++ b/home.html
@@ -5,14 +5,10 @@
   <meta charset="utf-8">
 
   <title>WhatsApp Home</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <meta name="description" content="WhatsApp Home">
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <h1>This is my WhatsApp Home Page</h1>
 </body>
 </html>
