--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
-<h1>Welcome to WhatsApp Homepage</b>
+<h1>Welcome to WhatsApp Homepage</h1>
+  <p>This is going to be my WhatsApp Application.</p>
 </body>
 </html>
